# RASC

./: .gitignore  README.md  pyproject.toml  requirements.txt
create_dataset/: build_dataset.py  build_index.py  download_vsac.py  release_manifest.py  split_manifest_release.jsonl
model_training/: train_cross_encoder.py  train_lightgbm.py  train_mlp.py
